[TP] update to Eclipse 4.30 and latest versions of other dependencies
For the migration of the test HttpServer the Jetty migration see:
https://eclipse.dev/jetty/documentation/jetty-12/programming-guide/index.html#pg-migration-11-to-12-servlet-to-handler